--- a/8-MENU-RESTAURANTE/index.html
+++ b/8-MENU-RESTAURANTE/index.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=
-    , initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
 
@@ -20,11 +19,15 @@
             <div class="underline"></div>
         </div>
         <div class="btn-container">
-            <button type="button" class="filter-btn" data-id="all">all</button>
+            <button type="button" class="filter-btn" data-id="all">
+                all
+            </button>
             <button type="button" class="filter-btn" data-id="breakfast">
                 breakfast
             </button>
-            <button type="button" class="filter-btn" data-id="lunch">lunch</button>
+            <button type="button" class="filter-btn" data-id="lunch">
+                lunch
+            </button>
             <button type="button" class="filter-btn" data-id="shakes">
                 shakes
             </button>
